refactor: Migrate to Spring Boot 3.2.1 and Java 17
Other upgrades:
- ArchUnit 1.2.1
- BouncyCastle 1.77
- Commons-Text 1.10.0
- Detekt 1.23.4
- Grgit 5.2.0
- Jib 3.4.0
- Kotlin 1.9.21
- LogCaptor 2.9.2
- MapStruct 1.5.5
- Restdocs-apispec 0.19.0
- Sonarqube 4.4.1.3373
- Spock 2.4-M1
- Spock Reports 2.5.1
- Test Logger 4.0.0
- Testcontainers 1.19.3
- Versions 0.50.0